--- a/index.html
+++ b/index.html
@@ -3,33 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DETODOPELIS - Películas y Series Online</title>
+    <title>DetodoPelis</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>DETODOPELIS</h1>
-        <p>Tu lugar para ver las mejores películas y series online.</p>
-        <nav>
-            <ul>
-                <li><a href="#home">Inicio</a></li>
-                <li><a href="#categories">Categorías</a></li>
-                <li><a href="#search">Buscar</a></li>
-            </ul>
-        </nav>
+        <h1>Bienvenidos a DetodoPelis</h1>
+        <p>¡Disfruta de las mejores películas aquí!</p>
     </header>
 
-    <section id="home">
-        <h2>Películas Populares</h2>
-        <div class="movie-grid" id="movieGrid">
-            <!-- Aquí se cargarán las películas dinámicamente -->
+    <section class="movie-list">
+        <!-- Películas de Cuevana -->
+        <div class="movie">
+            <img src="https://image.tmdb.org/t/p/w500/film1.jpg" alt="Película 1">
+            <h3>Película 1</h3>
+            <p>Sinopsis de la película 1</p>
+            <a href="https://www.cuevana3.io/pelicula/film1" target="_blank">Ver en Cuevana</a>
         </div>
+        
+        <div class="movie">
+            <img src="https://image.tmdb.org/t/p/w500/film2.jpg" alt="Película 2">
+            <h3>Película 2</h3>
+            <p>Sinopsis de la película 2</p>
+            <a href="https://www.cuevana3.io/pelicula/film2" target="_blank">Ver en Cuevana</a>
+        </div>
+
+        <div class="movie">
+            <img src="https://image.tmdb.org/t/p/w500/film3.jpg" alt="Película 3">
+            <h3>Película 3</h3>
+            <p>Sinopsis de la película 3</p>
+            <a href="https://www.cuevana3.io/pelicula/film3" target="_blank">Ver en Cuevana</a>
+        </div>
+
+        <!-- Puedes agregar más películas de esta forma -->
     </section>
 
     <footer>
-        <p>&copy; 2024 DETODOPELIS. Todos los derechos reservados.</p>
+        <p>&copy; 2024 DetodoPelis - Todos los derechos reservados</p>
     </footer>
-
-    <script src="app.js"></script>
 </body>
 </html>
+
