--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="movie-list">
         <!-- Películas de Cuevana -->
         <div class="movie">
-            <img src="https://image.tmdb.org/t/p/w500/film1.jpg" alt="Película 1">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcYwhfsgUHCsxKkkqkBZnD3LcBTW7uyTzmDg&s" alt="Película 1">
             <h3>Película 1</h3>
             <p>Sinopsis de la película 1</p>
             <a href="https://www.cuevana3.io/pelicula/film1" target="_blank">Ver en Cuevana</a>
